Bug 1434169 - LocaleService::NegotiateLanguages should return locales in exactly the form they were provided in the availableLocales list, not case-normalized. r=gandalf